# motor_test

./: .env  .gitignore  README.md
archive/legacy_tools/: diag_serial_bridge.py  move_st.sh  ping_after_forwarding_start.py  run_id1_st.py  scan_servo_bus.py
docs/: architecture.md
scripts/: build_ros.sh  launch_ros.sh  move_st.sh  run_ros.sh  serial_forwarding.sh  st_id1_com13_move.py  st_windows_proxy.py  st_windows_proxy_daemon.py
src/servo_bridge/: package.xml  setup.py
src/servo_bridge/servo_bridge/: ros_bridge_node.py
src/servo_bridge/servo_bridge/web/: app.js  index.html  styles.css
src/servo_bringup/: package.xml  setup.cfg  setup.py
src/servo_bringup/config/: motors.yaml
src/servo_bringup/launch/: system.launch.py
src/servo_interfaces/: CMakeLists.txt  package.xml
src/servo_interfaces/action/: MotorMove.action
src/servo_interfaces/msg/: MotorPercentCommand.msg  MotorState.msg
src/servo_interfaces/srv/: ServoCommand.srv  ServoControl.srv  ServoRead.srv
src/servo_motor/: package.xml  setup.py
src/servo_motor/servo_motor/: motor_node.py
src/servo_serial/: package.xml  setup.cfg  setup.py
src/servo_serial/servo_serial/: serial_node.py
