<?xml version="1.0"?>
<package format="3">
  <name>servo_bringup</name>
  <version>0.1.0</version>
  <description>Bringup package for serial, motor, and web bridge nodes.</description>
  <maintainer email="you@example.com">motor_test</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>
  <exec_depend>servo_serial</exec_depend>
  <exec_depend>servo_motor</exec_depend>
  <exec_depend>servo_bridge</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
