<?xml version="1.0"?>
<package format="3">
  <name>servo_serial</name>
  <version>0.1.0</version>
  <description>Lifecycle serial communication node for ST servos.</description>
  <maintainer email="you@example.com">motor_test</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>servo_interfaces</depend>

  <exec_depend>python3-serial</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
